@@ -3,8 +3,8 @@
 // implied warranty of merchantability or fitness for a particular purpose.
 // See file LICENSE for details and terms of copying.
 
+#include <stdarg.h>
 #import <objectbase/CustomProbeMap.h>
-#import <stdarg.h>
 #import <defobj.h> // Warning
 #import "local.h"
 
