@@ -1,3 +1,10 @@
+1998-07-07  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* objectbase.h (Probe): Add argument to setProbeClass.
+
+	* CustomProbeMap.m: Include stdarg.h first to avoid problems on
+	Redhat 5.
+	
 1998-07-06  Alex Lancaster  <alex@santafe.edu>
 
 	* objectbase.h (Arguments): Further clarify use of Arguments with
